--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="85a2de">  <td>23/02/02 15:52:09</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="loginTest.loginTest()[pri:0, instance:com.framework.testClasses.loginTest@5f049ea1]">loginTest</td> 
-  <td>main@959629210</td>   <td></td> </tr>
-<tr bgcolor="7972d8">  <td>23/02/02 15:52:17</td>   <td>7310</td> <td>&nbsp;</td><td title="&lt;&lt;baseClass.tearDown()[pri:0, instance:com.framework.testClasses.loginTest@5f049ea1]">&lt;&lt;tearDown</td> 
+<tr bgcolor="7972d8">  <td>23/02/03 11:14:01</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;baseClass.tearDown()[pri:0, instance:com.framework.testClasses.titleVerification@5f049ea1]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@959629210</td>   <td></td> </tr>
-<tr bgcolor="7972d8">  <td>23/02/02 15:52:04</td>   <td>-5376</td> <td>&nbsp;</td><td title="&gt;&gt;baseClass.setup()[pri:0, instance:com.framework.testClasses.loginTest@5f049ea1]">&gt;&gt;setup</td> 
+<tr bgcolor="85a2de">  <td>23/02/03 11:14:01</td>   <td>-26</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="titleVerification.pageTile()[pri:0, instance:com.framework.testClasses.titleVerification@5f049ea1]">pageTile</td> 
+  <td>main@959629210</td>   <td></td> </tr>
+<tr bgcolor="7972d8">  <td>23/02/03 11:13:50</td>   <td>-10420</td> <td>&nbsp;</td><td title="&gt;&gt;baseClass.setup()[pri:0, instance:com.framework.testClasses.titleVerification@5f049ea1]">&gt;&gt;setup</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@959629210</td>   <td></td> </tr>
 </table>
